Upgrade to Java 21 APIs and set Java version in pom files